[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/enemy.gd" type="Script" id=1]
[ext_resource path="res://sprites/Enemies/wingMan1.png" type="Texture" id=2]
[ext_resource path="res://sprites/Enemies/wingMan2.png" type="Texture" id=3]
[ext_resource path="res://sprites/Enemies/wingMan3.png" type="Texture" id=4]
[ext_resource path="res://sprites/Enemies/wingMan4.png" type="Texture" id=5]
[ext_resource path="res://sprites/Enemies/wingMan5.png" type="Texture" id=6]
[ext_resource path="res://sprites/Particles/smoke.png" type="Texture" id=7]
[ext_resource path="res://samples/enemyhurt.wav" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 0.01
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 100, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 80.936, 29.7908 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 69.7362, 10 )

[node name="enemy" type="Node2D"]
script = ExtResource( 1 )

[node name="anim" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
playing = true

[node name="particle" type="Particles2D" parent="."]
emitting = false
amount = 15
one_shot = true
explosiveness = 1.0
process_material = SubResource( 2 )
texture = ExtResource( 7 )

[node name="audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="enemy_damage" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 16
collision_mask = 16

[node name="shape" type="CollisionShape2D" parent="enemy_damage"]
shape = SubResource( 3 )

[node name="enemy_hurt" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 0, -50 )
collision_layer = 16
collision_mask = 16

[node name="shape" type="CollisionShape2D" parent="enemy_hurt"]
position = Vector2( 5.55182, 0 )
shape = SubResource( 4 )
[connection signal="finished" from="audio" to="." method="_on_audio_finished"]
[connection signal="body_entered" from="enemy_damage" to="." method="_on_enemy_damage_body_entered"]
[connection signal="body_entered" from="enemy_hurt" to="." method="_on_enemy_hurt_body_entered"]
